--- a/src/Orchard.Web/Modules/Orchard.Layouts/Styles/LayoutEditor/Element.css
+++ b/src/Orchard.Web/Modules/Orchard.Layouts/Styles/LayoutEditor/Element.css
@@ -51,6 +51,7 @@
   width: 28px;
   padding: 0;
   text-align: center;
+  z-index: 10;
 }
 .layout-editor-wrapper .layout-element-active,
 .layout-editor-wrapper .layout-element-focused {
